@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-03-31T16:09:23Z",
-  "count" : 16,
+  "timestamp" : "2022-04-14T08:13:03Z",
+  "count" : 4,
   "count_minmax" : [ 0, 16 ],
   "count_prev_day_inc" : 40,
   "count_prev_day_dec" : 0,
