@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-14T00:40:46Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 6,
-  "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "timestamp" : "2022-04-14T08:13:03Z",
+  "count" : 9,
+  "count_minmax" : [ 0, 9 ],
+  "count_prev_day_inc" : 15,
+  "count_prev_day_dec" : 12,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
