@@ -1,10 +1,10 @@
 {
-  "count": 159,
+  "count": 156,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 16,
+      "count": 4,
       "uniques": 1
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-04-13T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-14T00:00:00Z",
+      "count": 9,
       "uniques": 1
     }
   ]
